feat: 用户关联的角色、部门、岗位冗余为 ID 列表、名称列表